# jumputra

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
Jumputra/: CMakeLists.txt  Jumputra.cpp  Jumputra.h  Main.cpp
Jumputra/Common/inc/: Constant.h  Context.h  Eventable.h  ResourceManager.h  Resources.h  Updatable.h
Jumputra/Common/src/: Resources.cpp
Jumputra/Game/inc/: AnimatedSprite.h  CollisionRect.h
Jumputra/Game/src/: CollisionRect.cpp
Jumputra/Main/inc/: Jumputra.h
Jumputra/Main/src/: Jumputra.cpp  Main.cpp
Jumputra/States/inc/: State.h  StateCreator.h  StateGame.h  StateMenu.h  StateStack.h  States.h
Jumputra/States/src/: State.cpp  StateCreator.cpp  StateGame.cpp  StateMenu.cpp  StateStack.cpp
Jumputra/inc/: Jumputra.h  Menu.h  ResourceManager.h  State.h  StateStack.h
Jumputra/src/: Jumputra.cpp  Main.cpp  Menu.cpp
algorithm/: CMakeLists.txt  CMakelIsts.txt
algorithm/inc/: Agent.hpp  AgentMove.hpp  Algorithm.hpp  Ant.hpp  AntColony.hpp  AntGraph.hpp  Bot.hpp  DecisionNode.hpp  DecisionTree.hpp  Dummy.hpp  EdgeMove.hpp  Genetic.hpp  Graph.hpp  Greedy.hpp  Human.hpp  Movable.hpp  Move.hpp  Pheromone.hpp  Properties.hpp  QGraph.hpp  QLearning.hpp  Sequence.hpp  Wanderer.hpp
algorithm/src/: Agent.cpp  AgentMove.cpp  Algorithm.cpp  Ant.cpp  AntColony.cpp  AntGraph.cpp  Bot.cpp  DecisionNode.cpp  DecisionTree.cpp  Dummy.cpp  EdgeMove.cpp  Genetic.cpp  Graph.cpp  Greedy.cpp  Human.cpp  Movable.cpp  Move.cpp  Pheromone.cpp  Properties.cpp  QGraph.cpp  QLearning.cpp  Sequence.cpp  Wanderer.cpp
console/: CMakeLists.txt
console/inc/: Consolutra.hpp  Properties.hpp
console/src/: Consolutra.cpp  Properties.cpp  main.cpp
core/: CMakeLists.txt
core/inc/: Jsonable.hpp  Logger.hpp  Random.hpp  String.hpp
core/src/: Jsonable.cpp  Logger.cpp  Random.cpp  String.cpp
game/: CMakeLists.txt  main.cpp
game/data/jsons/: properties.json  segments.json  winds.json
game/engine/: CMakeLists.txt
game/engine/inc/: Character.hpp  CharacterProperties.hpp  Engine.hpp  GameEngine.hpp  PlatformsManager.hpp  Properties.hpp  PropertiesManager.hpp  WindsManager.hpp
game/engine/src/: Character.cpp  CharacterProperties.cpp  Engine.cpp  GameEngine.cpp  PlatformsManager.cpp  Properties.cpp  PropertiesManager.cpp  WindsManager.cpp
game/inc/: Character.hpp  Context.hpp  Controller.hpp  Eventable.hpp  Game.hpp  Goal.hpp  Jumputra.hpp  Language.hpp  Menu.hpp  MenuItem.hpp  Properties.hpp  Segment.hpp  SelectableItem.hpp  State.hpp  StateAgentChoice.hpp  StateAlgorithmChoice.hpp  StateGame.hpp  StateLanguage.hpp  StateMainMenu.hpp  StateMenu.hpp  StatePause.hpp  StateStack.hpp  StateWin.hpp  StateWorldChoice.hpp  Updatable.hpp  Wind.hpp
game/json/inc/: PropertiesLoader.hpp  SegmentsLoader.hpp
game/json/src/: PropertiesLoader.cpp  SegmentsLoader.cpp
game/logic/: CMakelIsts.txt
game/logic/inc/: Character.hpp  Logic.hpp
game/logic/src/: Logic.cpp
game/math/: CMakeLists.txt  Rect.hpp  Vector2.hpp
game/math/inc/: Function.hpp  Rect.hpp  Segment.hpp  Vector2.hpp
game/math/src/: Function.cpp
game/menu/inc/: SelectableItem.hpp
game/menu/src/: SelectableItem.cpp
game/physics/: CMakeLists.txt
game/physics/inc/: Body.hpp  BodyUpdater.hpp  Character.hpp  CharacterUpdater.hpp  DiagonalPlatform.hpp  DiagonalSegment.hpp  Engine.hpp  Entity.hpp  EntityUpdater.hpp  HorizontalPlatform.hpp  HorizontalSegment.hpp  KinematicRect.hpp  Kinematics.hpp  Parameters.hpp  Physics.hpp  PhysicsEngine.hpp  PhysicsProperties.hpp  Platform.hpp  PlatformDiagonal.hpp  PlatformHorizontal.hpp  PlatformVertical.hpp  Properties.hpp  Segment.hpp  Updater.hpp  VerticalPlatform.hpp  VerticalSegment.hpp  Wind.hpp  WindProperties.hpp  WindUpdater.hpp
game/physics/src/: Body.cpp  BodyUpdater.cpp  Character.cpp  CharacterUpdater.cpp  DiagonalPlatform.cpp  DiagonalSegment.cpp  Engine.cpp  Entity.cpp  EntityUpdater.cpp  HorizontalPlatform.cpp  HorizontalSegment.cpp  KinematicRect.cpp  Kinematics.cpp  Parameters.cpp  Physics.cpp  PhysicsEngine.cpp  PhysicsProperties.cpp  Platform.cpp  PlatformDiagonal.cpp  PlatformHorizontal.cpp  PlatformVertical.cpp  Properties.cpp  Segment.cpp  Updater.cpp  VerticalPlatform.cpp  VerticalSegment.cpp  Wind.cpp  WindProperties.cpp  WindUpdater.cpp
game/resources/inc/: ResourceManager.hpp  Resources.hpp
game/resources/src/: Resources.cpp
game/src/: Character.cpp  Context.cpp  Controller.cpp  Game.cpp  Goal.cpp  Jumputra.cpp  Language.cpp  Menu.cpp  MenuItem.cpp  Properties.cpp  Segment.cpp  SelectableItem.cpp  State.cpp  StateAgentChoice.cpp  StateAlgorithmChoice.cpp  StateGame.cpp  StateLanguage.cpp  StateMainMenu.cpp  StateMenu.cpp  StatePause.cpp  StateStack.cpp  StateWin.cpp  StateWorldChoice.cpp  Wind.cpp  main.cpp
game/states/inc/: State.hpp  StateGame.hpp  StateMenu.hpp  StateStack.hpp
game/states/src/: State.cpp  StateGame.cpp  StateMenu.cpp  StateStack.cpp
game/view/: CMakeLists.txt
game/view/inc/: Game.hpp  Wind.hpp
game/view/src/: Game.cpp  Wind.cpp  main.cpp
game/window/: CMakeLists.txt
game/window/inc/: Game.hpp
game/window/src/: Game.cpp  main.cpp
graphic/: CMakeLists.txt
graphic/inc/: Character.hpp  Goal.hpp  Properties.hpp  ResourceManager.hpp  Resources.hpp  Segment.hpp  Wind.hpp  Window.hpp
graphic/src/: Character.cpp  Goal.cpp  Properties.cpp  Resources.cpp  Segment.cpp  Wind.cpp  Window.cpp
graphics/: CMakeLists.txt
graphics/inc/: Character.hpp  Goal.hpp  Properties.hpp  ResourceManager.hpp  Resources.hpp  Segment.hpp  Wind.hpp  Window.hpp
graphics/src/: Character.cpp  Goal.cpp  Properties.cpp  Resources.cpp  Segment.cpp  Wind.cpp  Window.cpp
jp/: CMakeLists.txt
jp/inc/: Jumputra.hpp
jp/states/inc/: State.hpp  StateMenu.hpp  StateStack.hpp
jp/states/src/: State.cpp  StateMenu.cpp  StateStack.cpp
math/: CMakeLists.txt
math/inc/: Math.hpp  Rect.hpp  Segment.hpp  Vector2.hpp
math/src/: Math.cpp
ut/algorithm/: CMakeLists.txt
ut/algorithm/src/: PropertiesTest.cpp
ut/logic/: CMakeLists.txt
ut/math/: CMakeLists.txt
ut/math/src/: MathTest.cpp  (+3 more)
(+233 files in other folders)
